--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -29,18 +29,21 @@
 .about h3 {
     font-weight: 600;
     font-size: 16px;
-    color: #212EA0;
+    /* color: #212EA0; */
+    color: #b28228;
 }
 
 .about h2 {
     font-size: 35px;
-    color: #000f38;
+    /* color: #000f38; */
+    color: #1c1c1c;
     margin: 10px 0;
     max-width: 400px;
 }
 
 .about p {
-    color: #676767;
+    /* color: #676767; */
+    color: #3b3b3b;
     margin-bottom: 15px;
 }
 
