--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -2,6 +2,21 @@
     width: 100%;
     min-height: 100vh;
     background: linear-gradient(rgba(8,0,58,0.7),rgba(8,0,58,0.7)), url('../../assets/hero.jpeg');
+    /* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),linear-gradient(rgba(28, 28, 28, 0.7), rgba(28, 28, 28, 0.7)), url('../../assets/hero.jpeg'); */
+
+    /* background: linear-gradient(rgba(0,0.269,0.775, 0.301, 0.7),rgba(8,0,58,0.7)), url('../../assets/hero.jpeg'); */
+    /* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+    linear-gradient(rgba(255, 223, 79, 0.3), rgba(255, 223, 79, 0.3)), url('../../assets/hero.jpeg'); */
+    /* background: linear-gradient(rgba(12, 12, 54, 0.8), rgba(12, 12, 54, 0.8)), url('../../assets/hero.jpeg'); darblue*/
+    /* background: linear-gradient(rgba(34, 34, 34, 0.9), rgba(34, 34, 34, 0.9)), url('../../assets/hero.jpeg');charcoal */
+    /* background: linear-gradient(rgba(128, 0, 32, 0.8), rgba(128, 0, 32, 0.8)), url('../../assets/hero.jpeg'); maroon */
+    /* background: linear-gradient(rgba(20, 100, 100, 0.8), rgba(20, 100, 100, 0.8)), url('../../assets/hero.jpeg'); teal */
+    /* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),linear-gradient(rgba(70, 130, 180, 0.8), rgba(70, 130, 180, 0.8)), url('../../assets/hero.jpeg');slate */
+
+
+
+
+
     background-size: cover;
     background-position: center;
     color: #fff;
