--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -12,7 +12,8 @@
     width: 50px;
     border-radius: 50%;
     cursor: pointer;
-    background: #212EA0;
+    /* background: #212EA0; */
+    background: #b28228;
 }
 .back-btn{
     right: auto;
@@ -37,7 +38,8 @@
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     padding: 40px;
     border-radius: 10px;
-    color: #676767;
+    /* color: #676767; */
+    color: #3b3b3b;
     line-height: 1.4;
 }
 .slide img {
@@ -47,7 +49,8 @@
     border-radius: 50%;
     margin-right: 10px;
     margin-top: 0px;
-    border: 4px solid #212EA0;
+    /* border: 4px solid #212EA0; */
+    border: 4px solid #b28228;
 }
 /* .user-info img {
     margin-right: 15px;
@@ -59,7 +62,8 @@
     font-size: 15px;
 }
 .user-info h3{
-    color: #212EA0;
+    /* color: #212EA0; */
+    color: #b28228;
     margin: 0px;
 }
 
